# docuverse

./: #README.md#  .gitignore  README.md  granite_r2_blog.md  mrl_sweep.sh  pyproject.toml  requirements-chromadb.txt  requirements-elastic.txt  requirements-extra.txt  requirements-milvus.txt  requirements.txt  requirements_extra.txt  setup.py  setup.yaml
config/: clapnq_data_format.yml  data_template.yml  milvus_default_config.yaml  milvus_servers.json
docs/: cli.rst  conf.py  index.rst  presets.rst  quickstart.rst
docs/_static/: custom.css
docs/documentation/: architecture.md  matryoshka_training.md  pull_request_template.md
docuverse/: __init__.py  docuverse.py  docuverse_runner.py  run_retrieval.ipynb  run_retrieval_modelrunner.py
docuverse/cli/: __init__.py  __main__.py  _common.py  _delegate.py  cmd_convert.py  cmd_db.py  cmd_embed.py  cmd_evaluate.py  cmd_ingest.py  cmd_prepare.py  cmd_presets.py  cmd_run.py  cmd_search.py
docuverse/engines/: __init__.py  data_template.py  elastic.py  retrieval_engine.py  search_corpus.py  search_data.py  search_engine.py  search_engine_config_params.py  search_queries.py  search_result.py  sparse_config.py
docuverse/presets/: __init__.py
docuverse/resources/: stopwords.json
docuverse/utils/: JSONL_UTILS_README.md  __init__.py  compare_outputs.py  compile_proto.sh  compute_ranks.py  compute_stats.py  config_params.py  config_resolver.py  convert_zfiles_to_jsonl.py  create_rb_json.py  cuda_util.py  embedding_function.py  evaluation_output.py  evaluator.py  fof.py  ingest_and_test.py  jsonl_utils.py  milvus_database_server.py  milvus_server_management.py  parallel_tokenizer.py  retrieve_and_score.py  retrievers.py  stratified_sampling_stat_signif.py  test_histogram.py  test_milvus_bm25.py  test_model_interactive.py  test_remote_file_milvus.py  test_remote_file_milvus_mt.py  text_histogram.py  text_tiler.py  thread_test.py  ticker.py  timer.py
examples/: redhat.ipynb
examples/quickstart/: README.md  output.json  passages.jsonl  qrels.tsv  queries.jsonl  recipe.yaml
experiments/askhr/: setup.yaml
experiments/beir_naver_splade_rerank/: setup_bm25.yaml
experiments/beir_splade_rerank/: setup.yaml
experiments/clapnq/: milvus-dense.e5-base-v2.yaml  setup.yaml
experiments/ibm-swsupport/: gte-small-setup-256.yaml  setup.yaml
experiments/milvus_bm25/: ibmsw_milvus_hybrid.small.yaml  milvus_dense_bm25_hybrid.yaml  quora_milvus_dense.yaml  quora_milvus_dense_bm25_hybrid.small.yaml  sap_milvus_dense_bm25_hybrid.yaml
experiments/milvus_splade/: ibmsw_milvus_sparse.small.yaml  quora_milvus_dense_ibm.small.yaml
experiments/redhat/: retrieval.yaml
notebooks/: GraniteSparseTest.ipynb  collator_sentence_transformer.ipynb  compare_outputs.ipynb  convert_beir_questions_to_csv.ipynb  convert_sw_to_docuverse.ipynb  convert_tsv_to_parquet.ipynb  create_mldr_data.ipynb  create_reduced_corpus.ipynb  docuverse_test.ipynb  docuverse_test.py  granite sparse test.ipynb  granite_dense_test.ipynb  granite_sparse_test.ipynb  lmstudio_connect.ipynb  milvus_bm25.ipynb  milvus_issues.ipynb  milvus_struggles.ipynb  milvus_struggles.py  milvus_test.ipynb  quickstart.ipynb  r2_blog.ipynb  reranker_v2_test.ipynb  run_elastic_elser_query.ipynb  sample_brave_files.ipynb  sap_csv2jsonl.ipynb  sparse_encoder_milvus_test.ipynb  sparse_encoding_function_test.ipynb  test_cross_encoder.ipynb  test_gemma.ipynb  text_tiler_test.ipynb  torch_test.ipynb  zdocs_key_enhancement.ipynb
notebooks/debug/: milvus_squad_example.ipynb  milvus_struggles.ipynb  milvus_struggles.py  milvus_struggles_new.ipynb  ollama_comparison.ipynb  query_read_test.ipynb  r2_blog.ipynb  r2_reranking_test.ipynb  test_granite_r2_batch.ipynb
notebooks/utils/: compare_outputs.ipynb  convert_beir_questions_to_csv.ipynb  convert_data_from_hindi_agro.ipynb  convert_tsv_to_parquet.ipynb  create_benchmark_from_dataset.ipynb  create_mldr_data.ipynb  create_reduced_corpus.ipynb  fix_nq_file.ipynb  merge_corpora.ipynb  sap_csv2jsonl.ipynb  zdocs_key_enhancement.ipynb
scripts/: BUILD_README.md  COMPUTE_EMBEDDINGS_README.md  README_MODEL_COMPARISON.md  README_OPENVINO_CONVERSION.md  build_wheel.sh  cache_file_processor.py  compare_metrics.py  compare_timing.py  compute_embeddings_from_jsonl.py  convert_to_trec_qrels.py  download_hf_dataset_to_jsonl.py  english_bias_diagnostic.py  export_db_embeddings.py  export_to_openvino.py  export_to_openvino_onnx.py  granite_embedding_model_converter.py  granite_multilingual_quickcheck.py  granite_to_openvino_int8.py  json_to_jsonl_converter.py  jsonl_processor.py  make_exclude_list.py  model_file_copy.py  noreen_statistical_testing.py  noreen_statistical_testing_copy.py  onnx_vs_sentence_transformer_comparison.py  print_timings.py  probability_calibration_and_ece_evaluation.py  rouge_recall_processor.py  run_context_len_exp.sh  sentence_transformer_backend_comparison.py  test_granite_openvino_conversion.py  texttiler_test.py  vllm_test.py
scripts/biohash/: 00_START_HERE.md  BIOHASH_SUMMARY.md  IMPORT_NOTE.md  QUICK_START.md  README.md  README_BIOHASH.md  README_TEXT_HASHING.md  TEXT_HASHING_SUMMARY.md  biohash_docuverse.py  biohash_implementation.py  biohash_text.py  check_installation.sh  example_biohash_benchmark.py  test_biohash_simple.py  test_text_hashing.py  validate_biohash.py
scripts/matryoshka/: __init__.py  adaptor_trainer.py  base_trainer.py  config.py  data.py  losses.py  models.py  permutation_trainer.py  st_module.py  train.py
scripts/milvus_utils/: db2db_copy.py  milvus_copy_to_lancedb.py  milvus_copy_to_server.py  milvus_create_hnsw_index.py  milvus_db_stats.py  milvus_list_collections.py  (+1 more)
tests/: test_back_compat.py  test_cli_dispatch.py  test_config_resolver.py  test_engine_dispatch.py  test_evaluation_output.py  test_from_preset.py  test_jsonl_utils.py  test_lancedb_bm25.py  test_lancedb_dense.py  test_lancedb_hybrid.py  test_lancedb_sparse.py  test_overrides_merge.py  test_parallel_process.py  test_presets.py  test_quickstart_example.py  test_search_data.py  test_search_data2.py  test_search_data3.py  test_text_tiler.py
(+117 files in other folders)
