[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docuverse"
dynamic = ["version"]
requires-python = ">=3.10.0, <3.13.0"
description = "State-of-the-art Retrieval/Search engine models, including ElasticSearch, ChromaDB, Milvus, and PrimeQA"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "PrimeQA/DocUVerse Team", email = "primeqa@us.ibm.com"}
]
keywords = [
    "Question Answering (QA)",
    "Machine Reading Comprehension (MRC)",
    "Information Retrieval (IR)"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "rouge-score",
    "pyyaml~=6.0.2",
    "accelerate",
    "sentence-transformers",
    "python-dotenv~=1.0.1",
    "numpy~=2.2.6",
    "urllib3~=2.4.0",
    "torch~=2.8.0",
    "multiprocess~=0.70.18; platform_system=='Darwin'",
    "tqdm~=4.67.1",
    "transformers~=4.57.1",
    "orjson~=3.10.18",
    "pydantic_core~=2.27.2",
    "simple_colors~=0.1.5",
    "pandas~=2.2.0",
    "jinja2~=3.1.0",
    "grpcio~=1.60.0",
    "scipy==1.16.1",
    "matplotlib==3.10.5"
]

[project.optional-dependencies]
milvus = [
    "pymilvus[model]~=2.5.10",
]
chromadb = [
    "chromadb~=1.0.15",
]
elastic = [
    "elasticsearch~=8.17.3",
]
extra = [
    "pyizumo[pos]==2.3.0",
    "huggingface_hub[cli]",
    "pynvml",
    "scikit-learn~=1.3.0",
]
faiss = [
    "faiss-cpu",
]
all = [
    "pymilvus[model]~=2.5.9",
    "chromadb~=1.0.15",
    "elasticsearch~=8.17.3",
    "pyizumo[pos]==2.3.0",
    "huggingface_hub[cli]",
    "pynvml",
    "scikit-learn~=1.7.1",
    "matplotlib~=3.10.5",
]

[project.urls]
Homepage = "https://github.com/primeqa/docuverse"
Repository = "https://github.com/primeqa/docuverse"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["docuverse", "docuverse.*"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
"*" = ["*.cpp", "*.cu"]