[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docuverse"
dynamic = ["version"]
requires-python = ">=3.10.0, <3.15.0"
description = "State-of-the-art Retrieval/Search engine models, including ElasticSearch, ChromaDB, Milvus, and PrimeQA"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "PrimeQA/DocUVerse Team", email = "primeqa@us.ibm.com"}
]
keywords = [
    "Question Answering (QA)",
    "Machine Reading Comprehension (MRC)",
    "Information Retrieval (IR)"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "rouge-score",
    "pyyaml~=6.0.3",
    "accelerate",
    "sentence-transformers",
    "python-dotenv",
    "numpy~=2.4.3",
    "urllib3~=2.7.0",
    "torch~=2.10.0",
    "multiprocess~=0.70.18; platform_system=='Darwin'",
    "tqdm",
    "transformers~=5.8.0",
    "orjson",
    "pydantic_core",
    "simple_colors",
    "pandas~=3.0.2",
    "jinja2~=3.1.6",
    "grpcio",
    "scipy",
    "matplotlib"
]

[project.optional-dependencies]
milvus = [
    "pymilvus[model]~=3.0.0",
]
chromadb = [
    "chromadb",
]
elastic = [
    "elasticsearch~=8.17.3",
]
extra = [
    "pyizumo[pos]==2.3.0",
    "huggingface_hub[cli]",
    "pynvml",
    "scikit-learn",
]
faiss = [
    "faiss-cpu",
]
lancedb = [
    "lancedb>=0.15",
]
all = [
    "pymilvus[model]~=3.0.0",
    "chromadb",
    "elasticsearch",
    "pyizumo[pos]==2.3.0",
    "huggingface_hub[cli]",
    "pynvml",
    "scikit-learn",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/primeqa/docuverse"
Repository = "https://github.com/primeqa/docuverse"

[project.scripts]
ingest-and-test = "docuverse.utils.ingest_and_test:main_cli"
db2db-copy = "scripts.milvus_utils.db2db_copy:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["docuverse", "docuverse.*", "scripts", "scripts.*"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
"*" = ["*.cpp", "*.cu"]